--- a/body.css
+++ b/body.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #7c7c7c; /* เปลี่ยนสีพื้นหลังของ body เป็นสีเทาอ่อน */
 }
 header {
     background-color: #c40202;
